게시글 조회 및 생성에 사용자 좋아요 정보 추가에 따른 컨트롤러 및 서비스 리펙토링